# kitesurfdb

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  how-to-release.md  keyboard-plan.md  plan.md  spec.md  tasks.md
.claude/commands/: kitesurf-release.md
.github/workflows/: release.yml
crates/app/: Cargo.toml  Dioxus.toml
crates/app/assets/styles/: connection_bar.css  connection_dialog.css  definition_view.css  editor_area.css  main.css  results_panel.css  search_modal.css  sidebar.css  sql_display.css  sql_editor.css  tab_bar.css  table_browser.css
crates/app/src/: app.rs  highlight.rs  keyboard_shortcuts.rs  main.rs  operation_feedback.rs  utils.rs
crates/app/src/components/: connection_bar.rs  connection_dialog.rs  definition_view.rs  editor_area.rs  mod.rs  results_panel.rs  search_modal.rs  sidebar.rs  sql_display.rs  sql_editor.rs  tab_bar.rs  tab_container.rs  table_browser.rs
crates/assets/styles/: main.css
crates/core/: Cargo.toml
crates/core/src/: config.rs  connection_manager.rs  lib.rs  sql_ordering.rs  sql_update.rs  sql_where.rs  tab_manager.rs
crates/db/: Cargo.toml
crates/db/src/: error.rs  lib.rs  postgres.rs  sqlite.rs  traits.rs  types.rs
debian/: changelog  com.heitorvrb.kitesurfdb.metainfo.xml  control  copyright  kitesurfdb.desktop  rules
