[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
app-core = { path = "../core", package = "core" }
dark-light = "2.0.0"
db = { path = "../db" }
dioxus = { version = "0.7", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
