[package]
name = "core"
version = "0.1.3"
edition = "2024"

[dependencies]
db = { path = "../db" }
dirs = "6"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
