[package]
name = "db"
version = "0.1.7"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "rust_decimal"] }
rust_decimal = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
dirs = "5"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
